<resources>
    <string name="app_name" translatable="false">TRS-80</string>
    <string name="retrostore_activity_name" translatable="false">TRS-80 / RetroStore</string>
    <string name="chromecast_app_id" translatable="false">E0F0F42C</string>
    <string name="start_casting">Start Casting</string>
    <string name="community_url" translatable="false">https://retrostore.org/community</string>
    <string name="share_title">Share with…</string>
    <string name="share_subject">TRS-80 Emulator for Android</string>
    <string name="share_message">
        Check out this free TRS-80 emulator for Android:
        https://play.google.com/store/apps/details?id=org.puder.trs80</string>
    <string name="crash_toast_text">TRS-80 has crashed!</string>
    <string name="crash_dialog_title">TRS-80 has crashed</string>
    <string name="crash_dialog_text">The emulator has crashed forcing the application to stop.
                Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">Which TRS-80 application did you try to run?</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="trs80_dir" translatable="false">TRS-80</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_confirm_delete">Do you want to delete configuration \'%1$s\'?</string>
    <string name="alert_dialog_confirm_stop_emu">Do you want to stop emulation for configuration \'%1$s\'?</string>
    <string name="alert_dialog_inform_crash"><![CDATA[The emulator has crashed. It would be very helpful if you could
                email <a href="mailto:mobile@puder.org">mobile@puder.org</a> with the name of the TRS-80 app
                you were trying to run.]]></string>
    <string name="permission_explanation">The emulator needs access to the external storage of the
                device in order to save TRS-80 ROM- and disk-images. Without this permission, the
                emulator cannot work.</string>
    <string name="permission_request">OK, I understand</string>
    <string name="menu_download">Download</string>
    <string name="menu_add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_add_configuration">Add configuration</string>
    <string name="menu_community">Community</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>
    <string name="menu_start">Start</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="sound_enabled">enabled</string>
    <string name="sound_disabled">disabled</string>
    <string name="keyboard_abbrev_original">original</string>
    <string name="keyboard_abbrev_compact">compact</string>
    <string name="keyboard_abbrev_joystick">joystick</string>
    <string name="keyboard_abbrev_tilt">tilt</string>
    <string name="keyboard_abbrev_game_controller">controller</string>
    <string name="conf_header">Configurations</string>
    <string name="conf_item_hardware">Hardware:</string>
    <string name="conf_item_disks">Disks:</string>
    <string name="conf_item_sound">Sound:</string>
    <string name="conf_item_keyboard_portrait">Keyboard (P):</string>
    <string name="conf_item_keyboard_landscape">Keyboard (L):</string>
    <string name="conf_cassette">Cassette:</string>
    <string name="cassette_rewound">rewound</string>
    <string name="cassette_not_rewound">not rewound</string>
    <string name="downloading">Downloading (%1$d/%2$d)&#8230;</string>
    <string name="roms_download_failure_msg">Not all ROMs could be downloaded!</string>
    <string name="legacy_import_failed_title">Could not load your settings</string>
    <string name="legacy_import_failed_msg"><![CDATA[Your configurations from the previous version
        could not be read, so some may be missing or incomplete.<br/><br/>Nothing has been deleted.
        This will be tried again the next time the app is started.<br/><br/>Reason: %1$s]]></string>
    <string name="pref_title">General</string>
    <string name="pref_name_title">Name</string>
    <string name="pref_name_summary">Name of the configuration</string>
    <string name="pref_trs_model_title">TRS-80 Model</string>
    <string name="pref_trs_model_summary">The TRS-80 Model that will be emulated</string>
    <string name="pref_cassette_title">Cassette</string>
    <string name="pref_cassette_summary">Default blank tape</string>
    <string name="pref_disk1_title">Disk 1</string>
    <string name="pref_disk1_summary">File to use for disk 1</string>
    <string name="pref_disk2_title">Disk 2</string>
    <string name="pref_disk2_summary">File to use for disk 2</string>
    <string name="pref_disk3_title">Disk 3</string>
    <string name="pref_disk3_summary">File to use for disk 3</string>
    <string name="pref_disk4_title">Disk 4</string>
    <string name="pref_disk4_summary">File to use for disk 4</string>
    <string name="pref_character_color_title">Character color</string>
    <string name="pref_character_color_summary">The color used to render characters on the screen</string>
    <string name="pref_mute_sound_title">Mute</string>
    <string name="pref_mute_sound_summary_on">All game sounds will be muted</string>
    <string name="pref_mute_sound_summary_off">Play game sounds</string>
    <string name="pref_keyboard">Keyboard</string>
    <string name="pref_portrait_title">Portrait Mode</string>
    <string name="pref_keyboard_portrait_title">Portrait keyboard</string>
    <string name="pref_keyboard_portrait_summary">The keyboard type to be used in portrait mode</string>
    <string name="pref_landscape_title">Landscape Mode</string>
    <string name="pref_keyboard_landscape_title">Landscape keyboard</string>
    <string name="pref_keyboard_landscape_summary">The keyboard type to be used in landscape mode</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_misc">Miscellaneous</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="keyboard_original">Original layout</string>
    <string name="keyboard_compact">Compact layout</string>
    <string name="keyboard_joystick">Joystick control</string>
    <string name="keyboard_tilt">Tilt interface</string>
    <string name="keyboard_game_controller">Game controller</string>
    <string name="menu_done">Done</string>
    <string name="pref_roms">ROMs</string>
    <string name="pref_rom_model1_title">Model I</string>
    <string name="pref_rom_model1_summary">ROM to use for Model I</string>
    <string name="pref_rom_model3_title">Model III</string>
    <string name="pref_rom_model3_summary">ROM to use for Model III</string>
    <string name="pref_rom_model4_title">Model 4</string>
    <string name="pref_rom_model4_summary">ROM to use for Model 4</string>
    <string name="pref_rom_model4p_title">Model 4P</string>
    <string name="pref_rom_model4p_summary">ROM to use for Model 4P</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_rewind">Rewind</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_sound_on">Sound On</string>
    <string name="menu_sound_off">Sound Off</string>
    <string name="menu_tutorial">TRS-80 Tutorial</string>
    <string name="rewinding_cassette">Rewinding cassette&#8230;</string>
    <string name="menu_create">Create</string>
    <string name="mkdisk_jv1" translatable="false">JV1</string>
    <string name="mkdisk_jv3" translatable="false">JV3</string>
    <string name="mkdisk_dmk" translatable="false">DMK</string>
    <string name="mkdisk_single">Single</string>
    <string name="mkdisk_double">Double</string>
    <string name="mkdisk_5_inch">5 inch</string>
    <string name="mkdisk_8_inch">8 inch</string>
    <string name="mkdisk_create_error">Error creating disk image</string>
    <string name="mkdisk_bad_path">Illegal file name: </string>
    <string name="pref_mkdisk_general">General</string>
    <string name="pref_mkdisk_name_summary">Name of the disk image file</string>
    <string name="pref_mkdisk_name_title">Name</string>
    <string name="pref_mkdisk_format_title">Disk format</string>
    <string name="pref_mkdisk_format_summary">The disk format to use (JV1, JV3 or DMK)</string>
    <string name="pref_mkdisk_dmk_parameters">DMK Parameters</string>
    <string name="pref_mkdisk_sided_title">Number of sides</string>
    <string name="pref_mkdisk_sided_summary">Single or double sided</string>
    <string name="pref_mkdisk_density_title">Density</string>
    <string name="pref_mkdisk_density_summary">Single or double density</string>
    <string name="pref_mkdisk_size_title">Size</string>
    <string name="pref_mkdisk_size_summary">5 or 8 inch disk</string>
    <string name="pref_mkdisk_ignore_density_title">Ignore density flag</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_eject">Eject</string>
    <string name="path">Path</string>
    <string name="alert_dialog_confirm_eject">Do you want to eject the currently mounted file?</string>
    <string name="disk_image_created">Created disk image </string>
    <string name="error_model_not_supported">Only Model I and Model III are supported at this time.</string>
    <string name="error_no_rom">No valid ROM found. Please use Settings to set ROM.</string>
    <string name="error_no_disk">Disk image not found.</string>
    <string name="no_configurations">Tap on the shopping icon to download apps.</string>
    <string name="error_init">Error during initialization of the emulator (error code: %1$d).
        Please report error code and your device model to mobile@puder.org.</string>
    <string name="title_initial_setup">Initial Setup</string>
    <string name="initial_setup">Do you want to download the necessary TRS-80 ROM-images
                        from well-known Internet locations?</string>
    <string name="hint_title">Hint</string>
    <string name="hint_configuration_usage"><![CDATA[Tapping a configuration runs the emulator.
                        Long-press a configuration to reorder it. Use the info button
                        <img src="info_icon"/> for more details.]]></string>
    <string name="hint_emulator"><![CDATA[Use the virtual keyboard or an attached external
                        keyboard to type TRS commands. Consult the help menu for further
                        information.<p>
                        The following menu options are available in portrait mode:<br/>
                        &nbsp;&nbsp;<img src="pause_icon"/>: Pause emulator<br/>
                        &nbsp;&nbsp;<img src="reset_icon"/>: Reset emulator<br/>
                        &nbsp;&nbsp;<img src="rewind_icon"/>: Rewind cassette<br/>
                        &nbsp;&nbsp;<img src="paste_icon"/>: Paste clipboard to keyboard<br/>
                        &nbsp;&nbsp;<img src="sound_on_icon"/>: Mute sound<br/>
                        &nbsp;&nbsp;<img src="keyboard_icon"/>: Switch keyboard type]]></string>
    <string name="hint_keyboard_tilt">Tilt the device to trigger cursor keys. Press anywhere
                        on the screen to fire (space bar).</string>
    <string name="hint_keyboard_joystick">Use virtual joystick to trigger cursor keys. Press
                        anywhere on screen to fire (space bar).</string>
    <string name="hint_keyboard_external"><![CDATA[Use &lt;Ctrl&gt;-B for BREAK and &lt;Ctrl&gt;-C
                        for CLEAR.]]></string>
    <string name="hint_ok">Got it!</string>
    <string name="help_title_configurations">Help: Configurations</string>
</resources>