<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title"
        android:key="conf_general">
        <EditTextPreference
            android:key="conf_name"
            android:title="@string/pref_name_title"
            android:summary="@string/pref_name_summary" />
        <ListPreference
            android:entries="@array/conf_trs_model"
            android:title="@string/pref_trs_model_title"
            android:summary="@string/pref_trs_model_summary"
            android:key="conf_model"
            android:entryValues="@array/conf_trs_model_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_storage"
        android:key="conf_storage">
        <Preference
            android:title="@string/pref_cassette_title"
            android:summary="@string/pref_cassette_summary"
            android:key="conf_cassette" />
        <Preference
            android:title="@string/pref_disk1_title"
            android:summary="@string/pref_disk1_summary"
            android:key="conf_disk1" />
        <Preference
            android:title="@string/pref_disk2_title"
            android:summary="@string/pref_disk2_summary"
            android:key="conf_disk2" />
        <Preference
            android:title="@string/pref_disk3_title"
            android:summary="@string/pref_disk3_summary"
            android:key="conf_disk3" />
        <Preference
            android:title="@string/pref_disk4_title"
            android:summary="@string/pref_disk4_summary"
            android:key="conf_disk4" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_keyboard"
        android:key="conf_keyboard">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/conf_keyboard_type"
            android:title="@string/pref_keyboard_portrait_title"
            android:summary="@string/pref_keyboard_portrait_summary"
            android:key="conf_keyboard_portrait"
            android:entryValues="@array/conf_keyboard_type_values" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/conf_keyboard_type"
            android:title="@string/pref_keyboard_landscape_title"
            android:summary="@string/pref_keyboard_landscape_summary"
            android:key="conf_keyboard_landscape"
            android:entryValues="@array/conf_keyboard_type_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_misc"
        android:key="conf_misc">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/conf_character_color"
            android:title="@string/pref_character_color_title"
            android:summary="@string/pref_character_color_summary"
            android:key="conf_character_color"
            android:entryValues="@array/conf_character_color_values" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/pref_mute_sound_title"
            android:summaryOn="@string/pref_mute_sound_summary_on"
            android:summaryOff="@string/pref_mute_sound_summary_off"
            android:key="conf_mute_sound" />
    </PreferenceCategory>
</PreferenceScreen>