<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/configuration_card_padding">

    <TextView
        android:id="@+id/configuration_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <org.puder.trs80.ScreenshotView
        android:id="@+id/configuration_screenshot"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/configuration_screenshot_padding_top"
        android:padding="@dimen/configuration_screenshot_border"
        android:layout_below="@+id/configuration_name"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/configuration_table_padding"
        android:layout_marginTop="@dimen/configuration_table_padding_top"
        android:layout_below="@+id/configuration_screenshot" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingRight="@dimen/configuration_table_padding_horizontal"
                android:text="@string/conf_item_hardware"/>
            <TextView
                android:id="@+id/configuration_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/configuration_table_padding_vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingRight="@dimen/configuration_table_padding_horizontal"
                android:text="@string/conf_item_disks"/>
            <TextView
                android:id="@+id/configuration_disks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/configuration_table_padding_vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingRight="@dimen/configuration_table_padding_horizontal"
                android:text="@string/conf_cassette"/>
            <TextView
                android:id="@+id/configuration_cassette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/configuration_table_padding_vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingRight="@dimen/configuration_table_padding_horizontal"
                android:text="@string/conf_item_sound"/>
            <TextView
                android:id="@+id/configuration_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/configuration_table_padding_vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingRight="@dimen/configuration_table_padding_horizontal"
                android:text="@string/conf_item_keyboards"/>
            <TextView
                android:id="@+id/configuration_keyboards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/configuration_menu"
        android:src="@drawable/menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/configuration_button_padding"
        android:layout_margin="@dimen/configuration_button_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:id="@+id/configuration_reorder"
        android:src="@drawable/reorder_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/configuration_button_padding"
        android:layout_margin="@dimen/configuration_button_margin"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/configuration_menu"/>

</RelativeLayout>

</android.support.v7.widget.CardView>
